--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -1,74 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Authentication</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Login and Registration</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css"> <!-- External CSS -->
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Auth App</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#signup" id="nav-signup">Sign Up</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#login" id="nav-login">Login</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <h2 class="text-center" id="formTitle">Login</h2>
 
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h4 class="card-title text-center">User Authentication</h4>
-                        <div class="tab-content">
-                            <div id="signup" class="tab-pane fade show active">
-                                <form id="signup-form" class="mt-3">
-                                    <div class="form-group">
-                                        <label for="signup-username">Username</label>
-                                        <input type="text" class="form-control" id="signup-username" required>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="signup-password">Password</label>
-                                        <input type="password" class="form-control" id="signup-password" required>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
-                                </form>
-                            </div>
+                <!-- Navigation Tabs -->
+                <ul class="nav nav-tabs" id="authTabs" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link active" id="loginTab" data-bs-toggle="tab" href="#loginForm" role="tab" aria-controls="loginForm" aria-selected="true">Login</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="registerTab" data-bs-toggle="tab" href="#registerForm" role="tab" aria-controls="registerForm" aria-selected="false">Register</a>
+                    </li>
+                </ul>
 
-                            <div id="login" class="tab-pane fade">
-                                <form id="login-form" class="mt-3">
-                                    <div class="form-group">
-                                        <label for="login-username">Username</label>
-                                        <input type="text" class="form-control" id="login-username" required>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="login-password">Password</label>
-                                        <input type="password" class="form-control" id="login-password" required>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary btn-block">Login</button>
-                                </form>
+                <!-- Tab Content -->
+                <div class="tab-content mt-3">
+                    <!-- Login Form -->
+                    <div class="tab-pane fade show active" id="loginForm" role="tabpanel" aria-labelledby="loginTab">
+                        <form id="loginFormContent">
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
                             </div>
-                        </div>
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-block">Login</button>
+                        </form>
+                    </div>
+
+                    <!-- Registration Form -->
+                    <div class="tab-pane fade" id="registerForm" role="tabpanel" aria-labelledby="registerTab">
+                        <form id="registerFormContent">
+                            <div class="form-group">
+                                <label for="username">Username</label>
+                                <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="emailReg">Email</label>
+                                <input type="email" class="form-control" id="emailReg" placeholder="Enter your email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="passwordReg">Password</label>
+                                <input type="password" class="form-control" id="passwordReg" placeholder="Enter your password" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-block">Register</button>
+                        </form>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <footer>
+        <p>&copy; 2024 Brand Name. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms</a></p>
+    </footer>
+
+    <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script> <!-- Link to your script.js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
+    <!-- Custom JS for switching tabs -->
+    <script>
+        // Optional JS if you need custom behaviors
+        document.getElementById('loginFormContent').addEventListener('submit', function(event) {
+            event.preventDefault();
+            // Handle login logic here
+            alert('Login Form Submitted');
+        });
+
+        document.getElementById('registerFormContent').addEventListener('submit', function(event) {
+            event.preventDefault();
+            // Handle registration logic here
+            alert('Registration Form Submitted');
+        });
+    </script>
 </body>
+
 </html>
