--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -38,7 +38,7 @@
                                 <label for="password">Password</label>
                                 <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block">Login</button>
+                            <button type="submit" class="btn btn-primary w-100">Login</button>
                         </form>
                     </div>
 
@@ -57,7 +57,7 @@
                                 <label for="passwordReg">Password</label>
                                 <input type="password" class="form-control" id="passwordReg" placeholder="Enter your password" required>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block">Register</button>
+                            <button type="submit" class="btn btn-primary w-100">Register</button>
                         </form>
                     </div>
                 </div>
