--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -7,6 +7,7 @@
     <title>Login and Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css"> <!-- External CSS -->
+    <img src="image1.png" alt="A description of the image" class="custom-image">
 </head>
 
 <body>
@@ -67,7 +68,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Brand Name. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms</a></p>
+        <p>&copy; 2024 Self Defense UFAR. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms</a></p>
     </footer>
 
     <!-- Bootstrap JS and dependencies -->
