--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -1,83 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login and Registration</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> <!-- External CSS -->
-    <img src="image1.png" alt="A description of the image" class="custom-image">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Self-Defense</title>
+  <link rel="stylesheet" href="canv.css">
+  <script src="navigation.js" defer></script> <!-- External JavaScript file -->
 </head>
-
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="card-body">
-                <h2 class="text-center" id="formTitle">Login</h2>
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <!-- Logo and Self Defense Text -->
+    <div class="logo">Logo/SelfSense</div>
 
-                <!-- Navigation Tabs -->
-                <ul class="nav nav-tabs" id="authTabs" role="tablist">
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link active" id="loginTab" data-bs-toggle="tab" href="#loginForm" role="tab" aria-controls="loginForm" aria-selected="true">Login</a>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="registerTab" data-bs-toggle="tab" href="#registerForm" role="tab" aria-controls="registerForm" aria-selected="false">Register</a>
-                    </li>
-                </ul>
+    <!-- Navigation Links -->
+    <ul class="nav-links">
+      <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
+      <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
+      <li><a href="javascript:void(0);" onclick="loadPage('vr')">VR Glasses</a></li>
+      <li><a href="javascript:void(0);" onclick="loadPage('chat')">Chat</a></li>
+      <li><a href="javascript:void(0);" onclick="loadPage('quiz')">Quiz</a></li>
+      
+    </ul>
 
-                <!-- Tab Content -->
-                <div class="tab-content mt-3">
-                    <!-- Login Form -->
-                    <div class="tab-pane fade show active" id="loginForm" role="tabpanel" aria-labelledby="loginTab">
-                        <form id="loginFormContent">
-                            <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
-                            </div>
-                            <button type="submit" class="btn btn-primary w-100">Login</button>
-                        </form>
-                    </div>
-
-                    <!-- Registration Form -->
-                    <div class="tab-pane fade" id="registerForm" role="tabpanel" aria-labelledby="registerTab">
-                        <form id="registerFormContent">
-                            <div class="form-group">
-                                <label for="username">Username</label>
-                                <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="emailReg">Email</label>
-                                <input type="email" class="form-control" id="emailReg" placeholder="Enter your email" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="passwordReg">Password</label>
-                                <input type="password" class="form-control" id="passwordReg" placeholder="Enter your password" required>
-                            </div>
-                            <button type="submit" class="btn btn-primary w-100">Register</button>
-                        </form>
-                    </div>
-                </div>
-
-            </div>
-        </div>
+    <div class="login-register">
+      <a href="javascript:void(0);" onclick="loadPage('login')" class="get-started-btn">Login/Register</a>
     </div>
 
-    <footer>
-        <p>&copy; 2024 Self Defense UFAR. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms</a></p>
-    </footer>
+    <!-- Person Icon -->
+    <div class="person-icon">
+      <img src="person-icon.png" alt="Person Icon">
+    </div>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <!-- Armenian Flag Icon -->
+    <div class="flag-icon">
+      <img src="armenian-flag.png" alt="Armenian Flag">
+    </div>
+  </nav>
+  <div id="dynamic-content"></div>
+  <!-- Main Content Section -->
+  <div id="home-content" class="page-content">
+    <!-- Left Side Image -->
+    <div class="image-container">
+      <img src="home_nav.png" alt="Self-defense Image" class="image">
+    </div>
 
-    <!-- Custom JS for login, registration, and tab switching -->
-    <script src="script.js"></script>  <!-- Link to your script.js -->
+    <!-- Right Side Text and Quiz Button -->
+    <div class="text-container"> 
+      <h1>Welcome to SelfSense</h1><br>      
+      <h3><span style="color: red;">STAY PREPARED, STAY PROTECTED</span></h3><br>
+      <p>SafeSense is a self-defense platform that assesses your safety skills, matches you with expert trainers, and guides you through personalized training to boost your confidence and preparedness.</p><br>
+      <h3>Ready to defend confidently</h3><br>
+      <a href="javascript:void(0);" onclick="loadPage('login')" class="get-started-btn">LET’S GET STARTED</a>
+    </div>
+  </div>
+
+  <!-- About Us Content -->
+  <div id="about-content" class="page-content" style="display: none;">
+    <h2>About Us</h2>
+    <p>Learn more about our self-defense programs.</p>
+  </div>
+
+  <!-- VR Glasses Content -->
+  <div id="vr-content" class="page-content" style="display: none;">
+    <h2>VR Glasses</h2>
+    <p>Discover our VR Glasses for training and simulation.</p>
+  </div>
+
+  <!-- Chat Content -->
+  <div id="chat-content" class="page-content" style="display: none;">
+    <h2>Chat with Us</h2>
+    <p>Talk to a representative for more information.</p>
+  </div>
+
+  <!-- Quiz Content -->
+  <div id="quiz-content" class="page-content" style="display: none;">
+    <h2>Start the Quiz!</h2>
+    <p>Here is your quiz question...</p>
+  </div>
+
 </body>
-
 </html>
