--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -13,16 +13,17 @@
     <!-- Logo and Self Defense Text -->
     <div class="logo">Logo/SelfSense</div>
 
+    <div class="logo">Logo/SelfSense</div>
     <ul class="nav-links">
-      <li><a href="#home" onclick="loadPage('home')" class="active">Home</a></li>
-      <li><a href="#about" onclick="loadPage('about')">About Us</a></li>
-      <li><a href="#vr" onclick="loadPage('vr')">VR Glasses</a></li>
-      <li><a href="#chat" onclick="loadPage('chat')">Chat</a></li>
-      <li><a href="#quiz" onclick="loadPage('quiz')">Quiz</a></li>
+        <li><a href="javascript:void(0);" onclick="loadPage('index')" class="active">Home</a></li>
+        <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
+        <li><a href="javascript:void(0);" onclick="loadPage('vr')">VR Glasses</a></li>
+        <li><a href="javascript:void(0);" onclick="loadPage('chat')">Chat</a></li>
+        <li><a href="javascript:void(0);" onclick="loadPage('quiz')">Quiz</a></li>
   </ul>
 
-    <div class="login-register">   
-      <a href="#login" onclick="loadPage('login')" class="get-started-btn">Login/Register</a>
+    <div class="login-register">
+      <a href="javascript:void(0);" onclick="loadPage('login')">Login/Register</a>
     </div>
 
     <!-- Person Icon -->
