--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -10,72 +10,43 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="navbar">
-    <!-- Logo and Self Defense Text -->
-    <div class="logo">Logo/SelfSense</div>
-
     <div class="logo">Logo/SelfSense</div>
     <ul class="nav-links">
-        <li><a href="javascript:void(0);" onclick="loadPage('index')" class="active">Home</a></li>
+        <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
         <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
         <li><a href="javascript:void(0);" onclick="loadPage('vr')">VR Glasses</a></li>
         <li><a href="javascript:void(0);" onclick="loadPage('chat')">Chat</a></li>
         <li><a href="javascript:void(0);" onclick="loadPage('quiz')">Quiz</a></li>
-  </ul>
+    </ul>
 
     <div class="login-register">
       <a href="javascript:void(0);" onclick="loadPage('login')">Login/Register</a>
     </div>
 
-    <!-- Person Icon -->
     <div class="person-icon">
       <img src="person-icon.png" alt="Person Icon">
     </div>
 
-    <!-- Armenian Flag Icon -->
     <div class="flag-icon">
       <img src="armenian-flag.png" alt="Armenian Flag">
     </div>
   </nav>
+
   <div id="dynamic-content"></div>
-  <!-- Main Content Section -->
+
+  <!-- Static Home Content (only shown when "Home" is clicked) -->
   <div id="home-content" class="page-content">
-    <!-- Left Side Image -->
     <div class="image-container">
       <img src="home_nav.png" alt="Self-defense Image" class="image">
     </div>
 
-    <!-- Right Side Text and Quiz Button -->
-    <div class="text-container"> 
-      <h1>Welcome to SelfSense</h1><br>      
-      <h3><span style="color: red;">STAY PREPARED, STAY PROTECTED</span></h3><br>
-      <p>SafeSense is a self-defense platform that assesses your safety skills, matches you with expert trainers, and guides you through personalized training to boost your confidence and preparedness.</p><br>
-      <h3>Ready to defend confidently</h3><br>
+    <div class="text-container">
+      <h1>Welcome to SelfSense</h1>
+      <h3><span style="color: red;">STAY PREPARED, STAY PROTECTED</span></h3>
+      <p>SafeSense is a self-defense platform that assesses your safety skills, matches you with expert trainers, and guides you through personalized training to boost your confidence and preparedness.</p>
+      <h3>Ready to defend confidently?</h3>
       <a href="javascript:void(0);" onclick="loadPage('login')" class="get-started-btn">LET’S GET STARTED</a>
     </div>
-  </div>
-
-  <!-- About Us Content -->
-  <div id="about-content" class="page-content" style="display: none;">
-    <h2>About Us</h2>
-    <p>Learn more about our self-defense programs.</p>
-  </div>
-
-  <!-- VR Glasses Content -->
-  <div id="vr-content" class="page-content" style="display: none;">
-    <h2>VR Glasses</h2>
-    <p>Discover our VR Glasses for training and simulation.</p>
-  </div>
-
-  <!-- Chat Content -->
-  <div id="chat-content" class="page-content" style="display: none;">
-    <h2>Chat with Us</h2>
-    <p>Talk to a representative for more information.</p>
-  </div>
-
-  <!-- Quiz Content -->
-  <div id="quiz-content" class="page-content" style="display: none;">
-    <h2>Start the Quiz!</h2>
-    <p>Here is your quiz question...</p>
   </div>
 
 </body>
