--- a/backend/frontend/quiz_1.html
+++ b/backend/frontend/quiz_1.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="quiz.css"> <!-- External CSS -->
+    <link rel="stylesheet" href="canv.css"> <!-- External CSS -->
 </head>
 
 <body>
-    <div class="main-content">
-        <!-- Left Side Image -->
+    <!-- <div class="main-content">
+     Left Side Image 
         <div class="image-container">
-          <img src="home.jpg" alt="Self-defense Image" class="image"> <!-- Replace with your actual image path -->
-        </div>
+          <img src="home.jpg" alt="Self-defense Image" class="image">  Replace with your actual image path 
+    </div> -->
     
         <!-- Right Side Text and Quiz Button -->
         <div class="text-container">
@@ -24,16 +24,15 @@
         </div>
       </div>
 
-    <footer>
+    <!-- <footer>
         <p>&copy; 2024 Self Defense UFAR. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms</a></p>
     </footer>
 
-    <!-- Bootstrap JS and dependencies -->
+    Bootstrap JS and dependencies 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-
-    <!-- Custom JS for login, registration, and tab switching -->
+    Custom JS for login, registration, and tab switching -->
     <script src="script.js"></script>  <!-- Link to your script.js -->
 </body>
 
