--- a/backend/frontend/login.html
+++ b/backend/frontend/login.html
@@ -4,7 +4,7 @@
         <div class="card-body">
             <h2 class="text-center" id="formTitle">Login</h2>
 
-            <ul class="nav nav-tabs" id="authTabs" role="tablist">
+            <ul class="nav-tabs" id="authTabs" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a class="nav-link active" id="loginTab" data-bs-toggle="tab" href="#loginForm" role="tab" aria-controls="loginForm" aria-selected="true">Login</a>
                 </li>
