--- a/backend/frontend/quiz_1.html
+++ b/backend/frontend/quiz_1.html
@@ -17,7 +17,7 @@
     </div> -->
     
         <!-- Right Side Text and Quiz Button -->
-        <div class="text-container">
+        <div class="quiz-container">
           <h1>Find Out Your Self-Protection Level</h1>
           <p>Take our 10–15 question quiz to gauge your current self-defense preparedness. This quiz assesses what you already know, your reaction skills, and how prepared you are in real-life situations. Your score will help us match you with a trainer to enhance your self-defense skills.</p>
           <a href="quiz.html" class="start-quiz-btn">Start Quiz</a>
