--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -18,15 +18,12 @@
         <li><a href="javascript:void(0);" onclick="loadPage('chat')">Chat</a></li>
         <li><a href="javascript:void(0);" onclick="loadPage('quiz')">Quiz</a></li>
     </ul>
-
     <div class="login-register">
       <a href="javascript:void(0);" onclick="loadPage('login')">Login/Register</a>
     </div>
-
     <div class="person-icon">
       <img src="person-icon.png" alt="Person Icon">
     </div>
-
     <div class="flag-icon">
       <img src="armenian-flag.png" alt="Armenian Flag">
     </div>
@@ -39,7 +36,6 @@
     <div class="image-container">
       <img src="home_nav.png" alt="Self-defense Image" class="image">
     </div>
-
     <div class="text-container">
       <h1>Welcome to SelfSense</h1>
       <h3><span style="color: red;">STAY PREPARED, STAY PROTECTED</span></h3>
@@ -49,5 +45,11 @@
     </div>
   </div>
 
+  <!-- Chat Section (add this section for Final Submission to scroll to) -->
+  <div id="chatSection" class="page-content" style="display:none;">
+    <h2>Welcome to the Chat Section</h2>
+    <p>This is where the chat interface will appear.</p>
+    <!-- Insert your chat UI or app content here -->
+  </div>
 </body>
 </html>
