--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -29,7 +29,7 @@
     </div>
   </nav>
 
-  <div id="dynamic-content"></div>
+  <div id="dynamic-content"></div> <!-- This will contain the dynamic content -->
 
   <!-- Static Home Content (only shown when "Home" is clicked) -->
   <div id="home-content" class="page-content">
@@ -45,7 +45,12 @@
     </div>
   </div>
 
-  <!-- Chat Section (add this section for Final Submission to scroll to) -->
+  <!-- Quiz Section -->
+  <div id="quizSection" class="page-content" style="display:none;">
+    <!-- Quiz content will load here dynamically -->
+  </div>
+
+  <!-- Chat Section (loaded dynamically after quiz completion) -->
   <div id="chatSection" class="page-content" style="display:none;">
     <h2>Welcome to the Chat Section</h2>
     <p>This is where the chat interface will appear.</p>
