--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container my-5">
         <h2 class="text-center">Chat</h2>
-        <p>This is where the VR Glasses will be.</p>
+        <p>This is where the About Us will be.</p>
     </div>
 
     <footer class="bg-light py-4">
