--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -34,7 +34,7 @@
   <!-- Static Home Content (only shown when "Home" is clicked) -->
   <div id="home-content" class="page-content">
     <div class="image-container">
-      <img src="home_nav.png" alt="Self-defense Image" class="image">
+      <img src="home.png" alt="Self-defense Image" class="image">
     </div>
     <div class="text-container">
       <h1>Welcome to SelfSense</h1>
