--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -10,18 +10,30 @@
 </head>
 
 <body>
-    <div class="container">
-        <div id="quizContainer">
-            <!-- Dynamic content will be loaded here -->
+    <!-- <div class="main-content">
+     Left Side Image 
+        <div class="image-container">
+          <img src="home.jpg" alt="Self-defense Image" class="image">  Replace with your actual image path 
+    </div> -->
+    
+        <!-- Right Side Text and Quiz Button -->
+        <div class="quiz-container">
+          <h1>Find Out Your Self-Protection Level</h1>
+          <p>Take our 10–15 question quiz to gauge your current self-defense preparedness. This quiz assesses what you already know, your reaction skills, and how prepared you are in real-life situations. Your score will help us match you with a trainer to enhance your self-defense skills.</p>
+          <a href="quiz_content.html" class="start-quiz-btn">Start Quiz</a>
         </div>
-        <button id="nextButton" class="btn btn-primary" style="display:none;">Next</button>
-        <button id="retryButton" class="btn btn-secondary" style="display:none;">Retry</button>
-        <button id="finalSubmissionButton" class="btn btn-success" style="display:none;">Final Submission</button>
-        <div id="validationMessage" class="text-danger"></div>
-        <div id="result"></div>
-    </div>
+      </div>
 
-    <script src="quiz.js"></script>
+    <!-- <footer>
+        <p>&copy; 2024 Self Defense UFAR. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms</a></p>
+    </footer>
+
+    Bootstrap JS and dependencies 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    Custom JS for login, registration, and tab switching -->
+    <script src="script.js"></script>  <!-- Link to your script.js -->
 </body>
 
 </html>
