--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container my-5">
-        <h2 class="text-center">Chat</h2>
+        <h2 class="text-center">VR Glasses</h2>
         <p>This is where the VR Glasses will be.</p>
     </div>
 
