--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container my-5">
-        <h2 class="text-center">Chat</h2>
+        <h2 class="text-center">About Us</h2>
         <p>This is where the About Us will be.</p>
     </div>
 
