--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="quiz.css"> <!-- External CSS -->
+    <link rel="stylesheet" href="canv.css"> <!-- External CSS -->
 </head>
 
 <body>
@@ -21,7 +21,6 @@
         <div id="result"></div>
     </div>
 
-    <script src="quiz.js"></script>
 </body>
 
 </html>
