--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Self-Defense</title>
   <link rel="stylesheet" href="canv.css">
-  <script type="module" src="navigation.js" defer></script> <!-- External JavaScript file -->
+  <script src="navigation.js" defer></script> <!-- External JavaScript file -->
+  <script src="quiz.js" defer></script> <!-- External JavaScript file -->
 </head>
 <body>
   <!-- Navigation Bar -->
