--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -21,6 +21,7 @@
         <div id="result"></div>
     </div>
 </body>
+    <script src="navigation.js" defer></script> <!-- External JavaScript file -->
     <script src="quiz.js"></script>
 
 </html>
