--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div id="dynamic-content"></div>
     <div class="container">
         <div id="quizContainer">
             <!-- Dynamic content will be loaded here -->
