--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -21,8 +21,10 @@
         <div id="validationMessage" class="text-danger"></div>
         <div id="result"></div>
     </div>
+
+    <!-- Include JavaScript files in the correct order -->
+    <script src="navigation.js"></script>  <!-- Include navigation.js first -->
+    <script src="quiz.js"></script>        <!-- Then include quiz.js -->
 </body>
-    <script src="navigation.js"></script> 
-    <script src="quiz.js"></script>
 
 </html>
