--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -1,3 +1,4 @@
+<!-- chat.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,12 +24,11 @@
 
         <!-- Chat content will be here -->
         <div id="chatContent">
-            <!-- Chat UI elements -->
             <p>Start chatting here!</p>
         </div>
     </div>
 
-    <script src="navigation.js"></script>
+    <script src="navigation.js"></script> <!-- Navigation script (loads navbar) -->
     <script>
         // Dynamically load the navigation bar into #navbar-placeholder
         fetch('index.html')
