--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -1,4 +1,3 @@
-<!-- chat.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +27,7 @@
         </div>
     </div>
 
-    <script src="navigation.js"></script> <!-- Navigation script (loads navbar) -->
+    <script src="navigation.js"></script> <!-- Include navigation.js -->
     <script>
         // Dynamically load the navigation bar into #navbar-placeholder
         fetch('index.html')
