--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Navigation Bar -->
-  <nav class="navbar">
+  <nav class="navbar"  id="navbar-placeholder">
     <div class="logo">Logo/SelfSense</div>
     <ul class="nav-links">
         <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
