--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -7,6 +7,9 @@
     <title>Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="quiz.css"> <!-- External CSS -->
+    <script src="navigation.js" defer></script> <!-- External JavaScript file -->
+    <script src="quiz.js"></script>   
+    
 </head>
 
 <body>
@@ -41,9 +44,7 @@
         <div id="result"></div>
     </div>
 
-    <!-- Include JavaScript files in the correct order -->
-    <script src="navigation.js"></script>  <!-- Include navigation.js first -->
-    <script src="quiz.js"></script>        <!-- Then include quiz.js -->
-</body>
+   
+</body> 
 
 </html>
