--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -33,6 +33,7 @@
         </div>
       </nav>
     <div id="dynamic-content"></div>
+    <div id="home-content" class="page-content">
     <div class="container">
         <div id="quizContainer">
             <!-- Dynamic content will be loaded here -->
