--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -34,6 +34,7 @@
         </div>
       </nav>
     <div id="dynamic-content"></div>
+    <div id="quiz-content" class="page-content"></div>
     
     <div class="container">
         <div id="quizContainer">
