--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -34,9 +34,9 @@
         </div>
       </nav>
     <div id="dynamic-content"></div>
-    <div id="quiz-content" class="page-content"></div>
+    <div id="quizContent" class="page-content"></div>
     
-    <div class="container">
+    <div class="quiz-content">
         <div id="quizContainer">
             <!-- Dynamic content will be loaded here -->
         </div>
