--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -7,6 +7,7 @@
     <title>Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="canv.css"> <!-- External CSS -->
+   
     
     <script src="navigation.js" defer></script> <!-- External JavaScript file -->
     <script src="quiz.js"></script>   
@@ -34,10 +35,8 @@
         </div>
       </nav>
     <div id="dynamic-content"></div>
-    <div id="quizContent" class="page-content"></div>
-    
-    <div class="quiz-content">
-        <div id="quizContainer">
+    <div id="quizContainer" class="quiz-content">
+  
             <!-- Dynamic content will be loaded here -->
         </div>
         <button id="nextButton" class="btn btn-primary" style="display:none;">Next</button>
