--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -15,7 +15,7 @@
         <p>Take our 10–15 question quiz to gauge your current self-defense preparedness. This quiz assesses what you already know, your reaction skills, and how prepared you are in real-life situations. Your score will help us match you with a trainer to enhance your self-defense skills.</p>
 
         <!-- Start Quiz Button -->
-        <button id="startQuizButton" class="start-quiz-btn" onclick="startQuiz()">Start Quiz</button>
+        <button id="startQuizButton" class="start-quiz-btn">Start Quiz</button>
 
         <!-- Quiz Content (hidden initially) -->
         <div id="quizContainer" class="quiz-content" style="display: none;">
