--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -1,52 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="canv.css"> <!-- External CSS -->
-   
-    
-    <script src="navigation.js" defer></script> <!-- External JavaScript file -->
-    <script src="quiz.js"></script>   
-    
+  <meta charset="UTF-8">
+  <title>Simple Test</title>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      function startQuiz() {
+        console.log("Start Quiz button clicked");
+        document.getElementById('quizContainer').style.display = 'block';
+      }
+
+      document.getElementById('startQuizButton').addEventListener('click', startQuiz);
+    });
+  </script>
 </head>
-
 <body>
-    <nav class="navbar"  id="navbar-placeholder">
-        <div class="logo">Logo/SelfSense</div>
-        <ul class="nav-links">
-            <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('vr')">VR Glasses</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('chat')">Chat</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('quiz')">Quiz</a></li>
-        </ul>
-        <div class="login-register">
-          <a href="javascript:void(0);" onclick="loadPage('login')">Login/Register</a>
-        </div>
-        <div class="person-icon">
-          <img src="person-icon.png" alt="Person Icon">
-        </div>
-        <div class="flag-icon">
-          <img src="armenian-flag.png" alt="Armenian Flag">
-        </div>
-      </nav>
-    <div id="dynamic-content"></div>
-    <div id="quizContainer" class="quiz-content">
-  
-            <!-- Dynamic content will be loaded here -->
-        </div>
-        <button id="nextButton" class="btn btn-primary" style="display:none;">Next</button>
-        <button id="retryButton" class="btn btn-secondary" style="display:none;">Retry</button>
-        <button id="finalSubmissionButton" class="btn btn-success" style="display:none;">Final Submission</button>
-        <div id="validationMessage" class="text-danger"></div>
-        <div id="result"></div>
+    <button id="startQuizButton">Start Quiz</button>
+    <div id="quizContainer" style="display:none;">
+      <h2>Quiz Starts Here!</h2>
     </div>
-
-   
-</body> 
-
+</body>
 </html>
