--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -2,39 +2,28 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="canv.css"> <!-- External CSS -->
-  <script src="quiz.js" defer></script>   <!-- External JS for quiz logic -->  
-  
-  
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="canv.css"> <!-- External CSS -->
 </head>
+
 <body>
-    <div class="quiz-container">
-        <h1>Find Out Your Self-Protection Level</h1>
-        <p>Take our 10–15 question quiz to gauge your current self-defense preparedness. This quiz assesses what you already know, your reaction skills, and how prepared you are in real-life situations. Your score will help us match you with a trainer to enhance your self-defense skills.</p>
-
-        <!-- Start Quiz Button -->
-        <button id="startQuizButton" class="start-quiz-btn">Start Quiz</button>
-
-        <!-- Quiz Content (hidden initially) -->
-        <div id="quizContainer" class="quiz-content" style="display: none;">
-            <!-- Dynamic content will be loaded here -->
+    <!-- <div class="main-content">
+     Left Side Image 
+        <div class="image-container">
+          <img src="home.jpg" alt="Self-defense Image" class="image">  Replace with your actual image path 
+    </div> -->
+    
+        <!-- Right Side Text and Quiz Button -->
+        <div class="quiz-container">
+          <h1>Find Out Your Self-Protection Level</h1>
+          <p>Take our 10–15 question quiz to gauge your current self-defense preparedness. This quiz assesses what you already know, your reaction skills, and how prepared you are in real-life situations. Your score will help us match you with a trainer to enhance your self-defense skills.</p>
+          <a href="quiz_content.html" class="start-quiz-btn">Start Quiz</a>
         </div>
+      </div>
 
-        <!-- Buttons for navigation and submission (hidden initially) -->
-        <button id="nextButton" class="btn btn-primary" style="display:none;">Next</button>
-        <button id="retryButton" class="btn btn-secondary" style="display:none;">Retry</button>
-        <button id="finalSubmissionButton" class="btn btn-success" style="display:none;">Final Submission</button>
-
-        <!-- Validation and Results Display -->
-        <div id="validationMessage" class="text-danger"></div>
-        <div id="result"></div>
-    </div>
 </body>
 
 </html>
-
