--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -40,7 +40,7 @@
             <!-- Dynamic content will be loaded here -->
         </div>
         <button id="nextButton" class="btn btn-primary" style="display:none;">Next</button>
-        <button id="retryButton" class="btn btn-secondary" style="display:none;">Retry</button>
+        <button id="retryButton" class="btn btn-secondary" onclick="retryButtonHandler()" style="display:none;">Retry</button>
         <button id="finalSubmissionButton" class="btn btn-success" style="display:none;">Final Submission</button>
         <div id="validationMessage" class="text-danger"></div>
         <div id="result"></div>
