--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="result"></div>
-    <button onclick="goBack()">Go Back to Quiz</button>
+    <button onclick="goTo()">Start Chatting</button>
 
     <script>
         // Retrieve quiz results from sessionStorage
@@ -37,9 +37,9 @@
             document.getElementById('result').innerHTML = 'No results available. Please complete the quiz.';
         }
 
-        function goBack() {
+        function goTo() {
             // Redirect back to the quiz page (assuming it’s the home page)
-            window.location.href = 'quiz-page.html';  // Change to your actual quiz page URL
+            window.location.href = 'chat.html';  // Change to your actual quiz page URL
         }
     </script>
 </body>
