--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -35,6 +35,9 @@
     </nav>
     <div id="dynamic-content"></div>
     <div id="result"></div>
+    <div class="image-container">
+        <img src="coach.png" alt="Self-defense Image" class="image">
+      </div>
     <button onclick="loadPage('chat')">Start Chatting</button>
 
     <script>
