--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -36,9 +36,9 @@
     <div id="dynamic-content"></div>
     <div id="result"></div>
     <div class="image-container">
-        <img src="coach.png" alt="Self-defense Image" class="image">
+        <img src="coach.png" alt="Coach Image" class="image">
       </div>
-    <button onclick="loadPage('chat')">Start Chatting</button>
+    <button class="btn btn-primary" onclick="loadPage('chat')">Start Chatting</button>
 
     <script>
         // Retrieve quiz results from sessionStorage
