--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="navbar"  id="navbar-placeholder">
-        <div class="logo">Logo/SelfSense</div>
+      <div class="logo"></div>
         <ul class="nav-links">
             <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
             <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
