--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="navbar" id="navbar-placeholder">
-    <div class="logo"></div>
+    <img src="logo.png" alt="Logo" class="logo">
     <ul class="nav-links">
         <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
         <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
