--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -31,6 +31,7 @@
         </div>
       </nav>
     <div id="dynamic-content"></div>
+    <div class="home-content">
         <h2 class="text-center">VR Glasses</h2>
         <p class="text-center" span style="color: red;">The page is still under construction</p>
         <div class="image-container"></div>
