--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -32,8 +32,8 @@
       </nav>
     <div id="dynamic-content"></div>
     <div class="home-content">
-        <h2 class="text-center">VR Glasses</h2>
-        <p class="text-center" span style="color: red;">The page is still under construction</p>
+        <h2 class="vr-content">VR Glasses</h2>
+        <p class="vr-content" span style="color: red;">The page is still under construction</p>
         <div class="image-container"></div>
         <img src="vr_glasses.png" alt="Coach Image" class="image-vr">
     </div>
