--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -34,7 +34,7 @@
   <div id="dynamic-content"></div> <!-- This will contain the dynamic content -->
 
   <!-- Static Home Content (only shown when "Home" is clicked) -->
-  <div id="home-content" class="page-content">
+  <div id="index-content" class="page-content">
     <div class="image-container">
       <img src="home.png" alt="Self-defense Image" class="image">
     </div>
