--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -15,10 +15,12 @@
 
             We understand that self-defense isn’t just about physical strength—it’s about awareness, quick thinking and knowing how to react when it matters most. Whether you’re new to self-defense or looking to refine your skills, SafeSense is here to guide you every step of the way.
         </p>
-        <p>Our Vision
+        <p>
+            <h3> Our Vision</h3>
             At SafeSense, we believe that everyone has the right to feel safe, no matter where they are. We are passionate about building a community of empowered individuals who are ready to defend themselves and those they care about. Through personalized quizzes, expert trainers and innovative technology, we are creating a platform that brings practical self-defense knowledge to everyone, everywhere.
         </p>    
-        <p>  What We Offer
+        <p>  
+            <h3>What We Offer</h3>
             - Self-Defense Preparedness Quiz: Start by assessing your current level of self-defense knowledge and preparedness. Our carefully designed quiz will evaluate your strengths and areas for improvement, giving you a clear picture of where you stand.
               
             - Personalized Training Recommendations: Based on your quiz results, we’ll match you with one of our top trainers who will create a customized plan tailored to your needs. Whether you want to improve your reaction time, build confidence or learn new techniques, your personal trainer will guide you to success.
@@ -28,7 +30,7 @@
             - Virtual Reality Training (Coming Soon): We’re taking self-defense training to the next level with virtual reality. Soon, you’ll be able to practice real-world scenarios from the comfort of your home. Stay tuned for more information on how VR glasses will revolutionize your training experience.
          </p>
         <p>    
-            Why Choose SafeSense?
+           <h3>Why Choose SafeSense?</h3>
             We are more than just a self-defense platform—we’re a community. At SafeSense, we are committed to your growth and safety. We believe in using a holistic approach to self-defense, combining mental preparedness, physical skills and technology to ensure you’re always ready to face any challenge.</p>
         </p>
         </div>
