--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -10,7 +10,13 @@
 
 <body>
     <div class="container my-5">
+    <div class="image-container">
+            <img src="home_1.png" alt="Self-defense Image" class="image">
+    </div>
+    <div>
         <h1 class="text-center">About Us</h1>
+    </div>
+    <div>
         <p>Welcome to SafeSense, the ultimate self-defense platform dedicated to empowering individuals with the skills, knowledge and confidence to protect themselves in any situation. Our mission is simple: to help you take control of your personal safety through tailored training, expert guidance and cutting-edge technology. 
 
             We understand that self-defense isn’t just about physical strength—it’s about awareness, quick thinking and knowing how to react when it matters most. Whether you’re new to self-defense or looking to refine your skills, SafeSense is here to guide you every step of the way.
@@ -34,7 +40,7 @@
             We are more than just a self-defense platform—we’re a community. At SafeSense, we are committed to your growth and safety. We believe in using a holistic approach to self-defense, combining mental preparedness, physical skills and technology to ensure you’re always ready to face any challenge.</p>
         </p>
         </div>
-
+    </div>
     <footer class="bg-light py-4">
         <div class="container text-center">
             <p>&copy; 2024 Brand Name. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms</a></p>
