--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container my-5">
     <div class="image-container">
-            <img src="home_1.png" alt="Self-defense Image" class="image">
+            <img src="home_1.jpg" alt="Self-defense Image" class="image">
     </div>
     <div>
         <h1 class="text-center">About Us</h1>
