--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -13,10 +13,10 @@
     <div class="image-container">
             <img src="home_1.jpg" alt="Self-defense Image" class="image">
     </div>
-    <div>
-        <h1 class="text-center">About Us</h1>
-    </div>
-    <div>
+    
+    <h1 class="text-container">About Us</h1>
+    
+    <div class="text-container">
         <p>Welcome to SafeSense, the ultimate self-defense platform dedicated to empowering individuals with the skills, knowledge and confidence to protect themselves in any situation. Our mission is simple: to help you take control of your personal safety through tailored training, expert guidance and cutting-edge technology. 
 
             We understand that self-defense isn’t just about physical strength—it’s about awareness, quick thinking and knowing how to react when it matters most. Whether you’re new to self-defense or looking to refine your skills, SafeSense is here to guide you every step of the way.
