--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Self-Defense</title>
   <link rel="stylesheet" href="canv.css">
-  <script src="navigation.js" defer></script> <!-- External JavaScript file -->
+  <script src="navigation.js" defer></script>
+  <script src="script.js" defer></script>
   
 </head>
 <body>
