--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -9,8 +9,7 @@
     <script src="navigation.js" defer></script>
 </head>
 <body>   
-
-    <div class="content-container">
+    <div id="about-content"  class="content-container">
         <div class="about-image-container">
             <img src="home_1.jpg" alt="Self-defense Image" class="about-image">
         </div>
