--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -23,7 +23,7 @@
         </div>
 
         <!-- Placeholder for dynamic chat content or any other section -->
-        <div id="dynamic-content">
+        <div id="chat-content">
             <!-- Chat content or dynamic content will be loaded here -->
             <p>Start chatting here!</p>
         </div>
