--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navigation Panel (dynamically loaded from index.html) -->
     <div id="navbar-placeholder"></div>
-
+    <div id="dynamic-content"></div>
     <div class="container">
         <!-- Chat Section Title -->
         <h1>Chat Section</h1>
