--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -10,14 +10,8 @@
 </head>
 
 <body>
-    <!-- <div class="main-content">
-     Left Side Image 
-        <div class="image-container">
-          <img src="home.jpg" alt="Self-defense Image" class="image">  Replace with your actual image path 
-    </div> -->
-    
-        <!-- Right Side Text and Quiz Button -->
-        <div id="quiz-container" class="quiz-container">
+    <div id="dynamic-content"></div>
+      <div id="quiz-container" class="quiz-container">
           <h1>Find Out Your Self-Protection Level</h1>
           <p>Take our 10–15 question quiz to gauge your current self-defense preparedness. This quiz assesses what you already know, your reaction skills, and how prepared you are in real-life situations. Your score will help us match you with a trainer to enhance your self-defense skills.</p>
           <a href="quiz_content.html" class="start-quiz-btn">Start Quiz</a>
