--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="about.css">    
 </head>
-<body>   
+<body> 
+    <div id="dynamic-content"></div>  
     <div id="about-content"  class="content-container">
         <div class="about-image-container">
             <img src="home_1.jpg" alt="Self-defense Image" class="about-image">
