--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -8,8 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="canv.css"> 
     <link rel="stylesheet" href="quiz-results.css"> 
-    <script src="navigation.js" defer></script> 
-    <script src="quiz.js"></script>   
+      
 </head>
 
 <body>
@@ -32,7 +31,7 @@
           <img src="armenian-flag.png" alt="Armenian Flag">
         </div>
     </nav>
-
+    <div id="dynamic-content"></div>
     <div class="quiz-result-content">
         <div class="coach-image-container">
             <img src="coach.png" alt="Coach Image" class="coach-image">
@@ -68,6 +67,8 @@
             loadPage('chat'); // Redirect to the chat page (adjust URL accordingly)
         }
     </script>
+    <script src="navigation.js" defer></script> 
+    <script src="quiz.js"></script> 
 
 </body>
 </html>
