--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -74,7 +74,7 @@
 
   <script src="navigation.js" defer></script>
   <script src="script.js" defer></script>
-  <script>
+  <!-- <script>
     // Toggle the dropdown menu
     function toggleDropdown() {
       const dropdown = document.getElementById('dropdown-menu');
@@ -89,7 +89,7 @@
         dropdown.classList.remove('show'); // Hide dropdown if click is outside the icon
       }
     }
-  </script>
+  </script> -->
   
 </body>
 </html>
