--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -31,7 +31,7 @@
 </nav>
    
 <div id="dynamic-content"></div>
-  <div id="main-content" class="page-content">
+  <div id="home-content" class="page-content">
     <div class="image-container">
       <img src="home.png" alt="Self-defense Image" class="image">
     </div>
